# meshbuilder_3d

./: CMakeLists.txt
libs/tetgen1.5.0/: settings.h  settings.h~  tetgen.cxx  tetgen.h
libs/triangle/: triangle.c  triangle.h  tricall
src/: edge.h  facet.h  figure.h  fracture_cross_array.h~  mesh.cpp  mesh.cpp~  mesh.h  mesh.h~  meshsplitter.h  meshsplitter.h~  point.h  settings.h  settings.h~
src/figures/: cross_fracture.h  cross_fracture.h~  cube.h  cube.h~  fracture.h  fracture.h~  fracture_cross_array.h  fracture_cross_array.h~  layered_boundary.h  ply_model.h  rect_boundary.h  rect_boundary.h~
src/profile/: Profile.h
src/profile/src/: Profile.cpp  Profile.inl
